// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor Component renders editor form in progress state 1`] = `
<div
  className="editor-page"
>
  <div
    className="container page"
  >
    <div
      className="row"
    >
      <div
        className="col-md-10 offset-md-1 col-xs-12"
      >
        <ListErrors
          errors={null}
        />
        <form>
          <fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control form-control-lg"
                onChange={[Function]}
                placeholder="Article Title"
                type="text"
                value="My Article"
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control"
                onChange={[Function]}
                placeholder="What's this article about?"
                type="text"
                value="Description"
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <textarea
                className="form-control"
                onChange={[Function]}
                placeholder="Write your article (in markdown)"
                rows="8"
                value="Body"
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control"
                onChange={[Function]}
                onKeyUp={[Function]}
                placeholder="Enter tags"
                type="text"
                value=""
              />
              <div
                className="tag-list"
              >
                <span
                  className="tag-default tag-pill"
                >
                  <i
                    className="ion-close-round"
                    onClick={[Function]}
                  />
                  javascript
                </span>
              </div>
            </fieldset>
            <button
              className="btn btn-lg pull-xs-right btn-primary"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              Publish Article
            </button>
          </fieldset>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Editor Component renders editor form with article data 1`] = `
<div
  className="editor-page"
>
  <div
    className="container page"
  >
    <div
      className="row"
    >
      <div
        className="col-md-10 offset-md-1 col-xs-12"
      >
        <ListErrors
          errors={null}
        />
        <form>
          <fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control form-control-lg"
                onChange={[Function]}
                placeholder="Article Title"
                type="text"
                value="Test Article"
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control"
                onChange={[Function]}
                placeholder="What's this article about?"
                type="text"
                value="Test Description"
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <textarea
                className="form-control"
                onChange={[Function]}
                placeholder="Write your article (in markdown)"
                rows="8"
                value="Test Body Content"
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control"
                onChange={[Function]}
                onKeyUp={[Function]}
                placeholder="Enter tags"
                type="text"
                value=""
              />
              <div
                className="tag-list"
              >
                <span
                  className="tag-default tag-pill"
                >
                  <i
                    className="ion-close-round"
                    onClick={[Function]}
                  />
                  react
                </span>
                <span
                  className="tag-default tag-pill"
                >
                  <i
                    className="ion-close-round"
                    onClick={[Function]}
                  />
                  testing
                </span>
              </div>
            </fieldset>
            <button
              className="btn btn-lg pull-xs-right btn-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Publish Article
            </button>
          </fieldset>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Editor Component renders editor form with multiple tags 1`] = `
<div
  className="editor-page"
>
  <div
    className="container page"
  >
    <div
      className="row"
    >
      <div
        className="col-md-10 offset-md-1 col-xs-12"
      >
        <ListErrors
          errors={undefined}
        />
        <form>
          <fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control form-control-lg"
                onChange={[Function]}
                placeholder="Article Title"
                type="text"
                value="Tagged Article"
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control"
                onChange={[Function]}
                placeholder="What's this article about?"
                type="text"
                value="Article with tags"
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <textarea
                className="form-control"
                onChange={[Function]}
                placeholder="Write your article (in markdown)"
                rows="8"
                value="Content here"
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control"
                onChange={[Function]}
                onKeyUp={[Function]}
                placeholder="Enter tags"
                type="text"
                value="newtag"
              />
              <div
                className="tag-list"
              >
                <span
                  className="tag-default tag-pill"
                >
                  <i
                    className="ion-close-round"
                    onClick={[Function]}
                  />
                  react
                </span>
                <span
                  className="tag-default tag-pill"
                >
                  <i
                    className="ion-close-round"
                    onClick={[Function]}
                  />
                  redux
                </span>
                <span
                  className="tag-default tag-pill"
                >
                  <i
                    className="ion-close-round"
                    onClick={[Function]}
                  />
                  javascript
                </span>
                <span
                  className="tag-default tag-pill"
                >
                  <i
                    className="ion-close-round"
                    onClick={[Function]}
                  />
                  testing
                </span>
              </div>
            </fieldset>
            <button
              className="btn btn-lg pull-xs-right btn-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Publish Article
            </button>
          </fieldset>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Editor Component renders editor form with partial data 1`] = `
<div
  className="editor-page"
>
  <div
    className="container page"
  >
    <div
      className="row"
    >
      <div
        className="col-md-10 offset-md-1 col-xs-12"
      >
        <ListErrors
          errors={undefined}
        />
        <form>
          <fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control form-control-lg"
                onChange={[Function]}
                placeholder="Article Title"
                type="text"
                value="Draft Article"
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control"
                onChange={[Function]}
                placeholder="What's this article about?"
                type="text"
                value=""
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <textarea
                className="form-control"
                onChange={[Function]}
                placeholder="Write your article (in markdown)"
                rows="8"
                value=""
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control"
                onChange={[Function]}
                onKeyUp={[Function]}
                placeholder="Enter tags"
                type="text"
                value=""
              />
              <div
                className="tag-list"
              />
            </fieldset>
            <button
              className="btn btn-lg pull-xs-right btn-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Publish Article
            </button>
          </fieldset>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Editor Component renders editor form with validation errors 1`] = `
<div
  className="editor-page"
>
  <div
    className="container page"
  >
    <div
      className="row"
    >
      <div
        className="col-md-10 offset-md-1 col-xs-12"
      >
        <ListErrors
          errors={
            Object {
              "body": Array [
                "can't be blank",
              ],
              "description": Array [
                "can't be blank",
              ],
              "title": Array [
                "can't be blank",
              ],
            }
          }
        />
        <form>
          <fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control form-control-lg"
                onChange={[Function]}
                placeholder="Article Title"
                type="text"
                value=""
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control"
                onChange={[Function]}
                placeholder="What's this article about?"
                type="text"
                value=""
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <textarea
                className="form-control"
                onChange={[Function]}
                placeholder="Write your article (in markdown)"
                rows="8"
                value=""
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control"
                onChange={[Function]}
                onKeyUp={[Function]}
                placeholder="Enter tags"
                type="text"
                value=""
              />
              <div
                className="tag-list"
              />
            </fieldset>
            <button
              className="btn btn-lg pull-xs-right btn-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Publish Article
            </button>
          </fieldset>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Editor Component renders empty editor form for new article 1`] = `
<div
  className="editor-page"
>
  <div
    className="container page"
  >
    <div
      className="row"
    >
      <div
        className="col-md-10 offset-md-1 col-xs-12"
      >
        <ListErrors
          errors={null}
        />
        <form>
          <fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control form-control-lg"
                onChange={[Function]}
                placeholder="Article Title"
                type="text"
                value=""
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control"
                onChange={[Function]}
                placeholder="What's this article about?"
                type="text"
                value=""
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <textarea
                className="form-control"
                onChange={[Function]}
                placeholder="Write your article (in markdown)"
                rows="8"
                value=""
              />
            </fieldset>
            <fieldset
              className="form-group"
            >
              <input
                className="form-control"
                onChange={[Function]}
                onKeyUp={[Function]}
                placeholder="Enter tags"
                type="text"
                value=""
              />
              <div
                className="tag-list"
              />
            </fieldset>
            <button
              className="btn btn-lg pull-xs-right btn-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Publish Article
            </button>
          </fieldset>
        </form>
      </div>
    </div>
  </div>
</div>
`;
